tests/errors/test_35.x
// Excess elements in array initialiser

let x: i64[2] = [1, 2, 3, 4];

fn main() -> void {

    let y: i8[1] = ['a', 'b'];

}